--- a/angular-calculator.html
+++ b/angular-calculator.html
@@ -3,20 +3,28 @@
   <head>
     <title>Dave's Calculator</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.js"></script>
+    <script type="text/javascript" src='calc.js'></script>
   </head>
   <body ng-controller='Calc'>
-
-     <p>{{output}}</p>
-
+     <div class='calcButtons'>
+        <button ng-click='updateOutput(1)'>1</button>
+        <button ng-click='updateOutput(2)'>2</button>
+        <button ng-click='updateOutput(3)'>3</button>
+        <button ng-click='updateOutput(4)'>4</button>
+        <button ng-click='updateOutput(5)'>5</button>
+        <button ng-click='updateOutput(6)'>6</button>
+        <button ng-click='updateOutput(7)'>7</button>
+        <button ng-click='updateOutput(8)'>8</button>
+        <button ng-click='updateOutput(9)'>9</button>
+        <button ng-click='add()'>+</button>
+        <button ng-click='subtract()'>-</button>
+        <button ng-click='multiply()'>*</button>
+        <button ng-click='devide()'>/</button>
+        <button ng-click='calculate()'>=</button>
+        <button ng-click='clear()'>Clear</button>
+        <p>{{output}}</p>
+        <p>{{pendingOperation}}</p>
+     </div>
   </body>
 </html>
 
-<script type="text/javascript">
-  function Calc($scope) {
-
-    $scope.output = 0;
-
-    $scope.newNumber = true;
-
-  }
-</script>
